[package]
name = "music-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
playback = ["rodio"]
rodio = ["dep:rodio"]

[dependencies]
wasm-bindgen = "0.2"
hound = "3.5.1"
rodio = { version = "0.17", optional = true }
rand = "0.8.5"
