[package]
name = "music-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
playback = ["rodio"]
web = ["wasm-bindgen"]
midi = ["dep:midly"]
rodio = ["dep:rodio"]
wasm-bindgen = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
hound = "3.5.1"
rodio = { version = "0.17", optional = true }
rand = "0.8.5"
midly = { version = "0.5", optional = true }
